# Exocortex

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-TW.md  pyproject.toml
.claude/: settings.json
.claude/commands/ctx/: arch.md  content.md  eod.md  experiment.md  merge.md  onboard.md  project.md  publish.md
.claude/commands/opsx/: apply.md
.claude/commands/think/: eval.md
.claude/hooks/: capture_session_end.py  capture_session_start.py  capture_subagent_done.py  capture_subagent_start.py  capture_tool_error.py  capture_user_prompt.py
.claude/hooks/lib/: event_writer.py  test_event_writer.py
contexts/: MANIFEST.md
contexts/blog/: draft_exocortex-architecture-introduction.md
contexts/survey_sessions/: 2024-01-20_agentic-ai-memory-systems.md
contexts/thought_review/: 2024-01-25_on-building-ai-native-tools.md
contexts/work_logs/: 2024-01-15_example-work-log.md
inbox/: ideas.md  reading_list.md  todos.md
infra/periodic_jobs/: CRONTAB.md
infra/periodic_jobs/state_audit/: README.md  __init__.py  core.py  cron.py  test_cron.py  verify_clean_scenario.py
infra/state/: README.md  __init__.py  lib.py  system_state.json  test_lib.py
infra/tools/: rename_project.py  sync-skill-index.py
memory/: OBSERVATIONS.md
openspec/specs/architecture-map/: spec.md
projects/: INDEX.md
projects/example-project/: PROJECT.md
registry/: career.md  dev.md  knowledge.md  library.md  life.md
rules/: ARCHITECTURE.md  COMMUNICATION.md  CORE.md  ENVIRONMENT.md  SOUL.md  USER.md  WORKSPACE.md
rules/axioms/: INDEX.md
rules/skills/: INDEX.md
(+78 files in other folders)
